[project]
name = "datasette-llm"
version = "0.1"
dependencies = [
    "datasette",
    "llm",
]

[project.entry-points.datasette]
llm = "datasette_llm"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
datasette_llm = ["static/*", "templates/*"]
